[package]
name = "moss"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "moss"
test = true
bench = false

[dependencies]

bootloader = { version = "0.9.8", features = ["map_physical_memory"] }
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
pc-keyboard = "0.9.0"
pic8259 = "0.11.0"
spin = "0.12.0"
uart_16550 = "0.6.0"
volatile = "0.2.6"
x86_64 = "0.15.4"

[package.metadata.bootimage]
test-args = ['-device', 'isa-debug-exit,iobase=0xf4,iosize=0x04', '-serial', 'stdio', "-display", "none"]
test-success-exit-code = 33 #(0x10 << 1) | 1

[[test]]
name = "stack_overflow"
harness = false
